# andrew-text

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: compile-options.cmake  docs.cmake  install.cmake
docs/: Doxyfile.in
src/: CMakeLists.txt  lib.cpp  lib.hpp
tools/: sed.sh
